# space-eval-rag

./: .gitignore  README.md  main.py  pyproject.toml
inference/: evaluator.py
inference/adapters/: __init__.py  base_metric.py  base_task.py  registry.py
inference/adapters/metrics/: __init__.py  hf.py
inference/adapters/tasks/: __init__.py  choice_generate.py  choice_logprob.py  classification.py  generic.py  likert_generate.py  likert_logprob.py  text_generation.py
inference/analysis/: __init__.py  __main__.py  cli.py  loader.py  plots.py  runner.py
inference/config/: choice_likert.yaml  classify.yaml  constrained_qa_classify.yaml  flan_summary.yaml  generic_test.yaml  manager.py  models.py  qa_classify.yaml  rag_example.yaml  rag_files_docx.yaml  rag_files_jsonl.yaml  rag_files_md.yaml  rag_files_mixed.yaml  rag_files_pdf.yaml  rag_files_txt.yaml  sample-config.yaml  sample_config.yaml  sciq_generic.yaml  tiny_test_config.yaml
inference/datasets/: __init__.py  file_corpus.py
inference/datasets/readers/: __init__.py  base.py  jsonl.py  pdf.py  text.py
inference/logging/: logger.py
inference/model/: __init__.py  api.py  base_model.py  core_model.py  factory.py  huggingface.py  model.py  vllm.py
inference/rag/: __init__.py  embeddings.py  index.py  manager.py  prompt_builder.py
inference/rag/components/: __init__.py  corpus_loader.py  index_builder.py  prompt_renderer.py  (+1 more)
inference/task/: aggregator.py  processor.py
inference/util/: model_paths.py  parallel-executor.py  parallel_executor.py
tests/: test_config_manager.py  test_dataclasses.py
