[project]
name = "space-eval-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.4.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.0.0",
    "docx2txt>=0.9",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.13.2",
    "jq>=1.6.0",
    "langchain>=1.2.8",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "nltk>=3.9.2",
    "pypdf>=4.3.1",
    "pyyaml>=6.0.2",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "vllm>=0.15.0",
]
